[project]
name = "sudoku-clues"
dynamic = ["version"]
dependencies = [
    "termcolor"
]
requires-python = ">= 3.14"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
lint.select = ["E", "F", "I", "B", "ANN"]

[tool.ruff.lint.per-file-ignores]
"test/*" = ["F811", "ANN"]